fix: change gap

--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ li {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 10px;
+    gap: 20px;
 }
 
 .project__img {
